--- a/dhanvina-portfolio-export/.github/workflows/deploy.yml
+++ b/dhanvina-portfolio-export/.github/workflows/deploy.yml
@@ -31,10 +31,10 @@ jobs:
           cache: 'npm'
 
       - name: Install Dependencies
-        run: npm ci
-
-      - name: Build
-        run: npm run build
+        run: npm ci      - name: Build
+        run: |
+          npm run build
+          touch dist/.nojekyll
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
