--- a/dhanvina-portfolio-export/.github/workflows/deploy.yml
+++ b/dhanvina-portfolio-export/.github/workflows/deploy.yml
@@ -31,10 +31,14 @@ jobs:
           cache: 'npm'
 
       - name: Install Dependencies
-        run: npm ci      - name: Build
+        run: npm ci
+
+      - name: Build
         run: |
           npm run build
           touch dist/.nojekyll
+          cp public/404.html dist/
+          cp public/index.html dist/
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
